HTMLにmodeを与える

--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -10,4 +10,4 @@
 </div>
 <%= render 'shared/route_points', mode: :walk %>
 <div id="map"></div>
-<%= render 'shared/route_information' %>
+<%= render 'shared/route_information', mode: :walk %>
