--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -10,4 +10,4 @@
 </div>
 <%= render 'shared/route_points', mode: :car %>
 <div id="map"></div>
-<%= render 'shared/route_information' %>
+<%= render 'shared/route_information' , mode: :car %>
