クリックイベントリセットを防止

--- a/app/views/shared/_route_menu.html.erb
+++ b/app/views/shared/_route_menu.html.erb
@@ -8,7 +8,7 @@
     </button>
 
     <button id="resetRouteBtn" class="appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]">
-      <%= image_tag "/images/clear_route.png", alt: "search_route", class: "btn_effect h-17 -mt-1" %>
+      <%= image_tag "/images/clear_route.png", alt: "clear_route", class: "btn_effect h-17 -mt-1" %>
     </button>
 
     <% if user_signed_in? %>
